--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Core/Maps/TopDownExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Core/UI/ShopUI
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -133,9 +133,18 @@ LastLevel=/Game/Core/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/UI/ShopUI/Widget_LootChestIcons.Widget_LootChestIcons
-OpenAssetsAtExit=/Game/Core/UI/ShopUI/Widget_ShopWindow.Widget_ShopWindow
+OpenAssetsAtExit=/Game/Core/UI/ShopUI/Widget_LootChestRewards.Widget_LootChestRewards
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster.Widget_MainMenuRoster
 OpenAssetsAtExit=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY.Widget_AreYouSureBUY
+OpenAssetsAtExit=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest.LootTable_PremiumChest
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+OpenAssetsAtExit=/Game/Core/Blueprints/MainPlayerController.MainPlayerController
+OpenAssetsAtExit=/Game/Core/DataBPs/Struct_LootChests.Struct_LootChests
+OpenAssetsAtExit=/Game/Core/DataBPs/LootTables/Enum_ChestType.Enum_ChestType
+OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_LootChests.DataTable_LootChests
+OpenAssetsAtExit=/Game/Core/Fonts/Game_of_Thrones.Game_of_Thrones
+OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
+OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
 
 [PluginBrowser]
 InstalledPlugins=DungeonArchitect
@@ -145,7 +154,7 @@ InstalledPlugins=PlayFab
 InstalledPlugins=Savior
 
 [RootWindow]
-ScreenPosition=X=457.600 Y=237.600
+ScreenPosition=X=457.000 Y=237.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -163,7 +172,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../GoTLegends/GoTLegends/Content/Core/Maps
+UNR=E:/GoTLegends/GoTLegends/Content/Core/Maps
 BRUSH=E:/GoTLegends/Content/
 FBX=E:/GoTLegends/Content/
 FBXAnim=E:/GoTLegends/Content/
@@ -809,6 +818,8 @@ TextureEditor.TimeStamp=2018.11.01-10.02.14
 TextureEditor.LastCompileMethod=Unknown
 DataTableEditor.TimeStamp=2018.11.01-10.02.07
 DataTableEditor.LastCompileMethod=Unknown
+FontEditor.TimeStamp=2018.11.01-10.02.09
+FontEditor.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -911,6 +922,7 @@ Widget_LootChestRewards_C=StructProperty.DefaultValueCategory.None,
 Widget_ShopWindow_C=StructProperty.DefaultValueCategory.None,
 Widget_LootChestIcons_C=StructProperty.DefaultValueCategory.None,
 Widget_AreYouSureBUY_C=StructProperty.DefaultValueCategory.None,
+CalculateRewards=StructProperty.DefaultValueCategory.None,
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1539,32 +1551,33 @@ Widget_AreYouSureBUY_C.Render Transform=True
 Widget_AreYouSureBUY_C.Clipping=True
 Widget_AreYouSureBUY_C.Navigation=True
 Widget_AreYouSureBUY_C.Default=True
+FontFace.FontFace=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
 Widget.Behavior=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
-MRUItem1=/Game/Core/UI/ShopUI/Widget_ShopWindow
-MRUItem2=/Game/Core/UI/ShopUI/Widget_LootChestIcons
-MRUItem3=/Game/Core/DataBPs/DataTable_LootChests
-MRUItem4=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
-MRUItem5=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem6=/Game/Core/DataBPs/Struct_LootChests
-MRUItem7=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem8=/Game/Core/DataBPs/LootTables/Struct_RewardStruct
-MRUItem9=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem10=/Game/Core/DataBPs/Enum_RewardRarity
-MRUItem11=/Game/Core/DataBPs/LootTables/Struct_LootTable
-MRUItem12=/Game/Core/DataBPs/LootTables/EnumRewardTypes
-MRUItem13=/Game/Core/Blueprints/MainPlayerController
-MRUItem14=/Game/Core/Blueprints/GOTGameMode
-MRUItem15=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem17=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem18=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem19=/Game/Core/DataHolderBps/Character/CharDataHolder_KaleesiDaenerys
+MRUItem0=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem1=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
+MRUItem2=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem3=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem4=/Game/Core/Fonts/Game_of_Thrones
+MRUItem5=/Game/Core/UI/ShopUI/Widget_LootChestIcons
+MRUItem6=/Game/Core/DataBPs/DataTable_LootChests
+MRUItem7=/Game/Core/DataBPs/LootTables/Enum_ChestType
+MRUItem8=/Game/Core/DataBPs/Struct_LootChests
+MRUItem9=/Game/Core/Blueprints/MainPlayerController
+MRUItem10=/Game/Core/Blueprints/GOTGameMode
+MRUItem11=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
+MRUItem12=/Game/Core/UI/ShopUI/Widget_LootChestRewards
+MRUItem13=/Game/Core/UI/ShopUI/Widget_ShopWindow
+MRUItem14=/Game/Core/DataBPs/LootTables/Struct_RewardStruct
+MRUItem15=/Game/Core/DataBPs/Enum_RewardRarity
+MRUItem16=/Game/Core/DataBPs/LootTables/Struct_LootTable
+MRUItem17=/Game/Core/DataBPs/LootTables/EnumRewardTypes
+MRUItem18=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem19=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
 
 [AssetEditorToolkitTabLocation]
 /Game/Core/UI/AuthenticationUassets/OurGSGameMode.OurGSGameMode=1
@@ -1614,6 +1627,8 @@ MRUItem19=/Game/Core/DataHolderBps/Character/CharDataHolder_KaleesiDaenerys
 /Game/Core/UI/ShopUI/Widget_ShopWindow.Widget_ShopWindow=1
 /Game/Core/UI/ShopUI/Widget_LootChestRewards.Widget_LootChestRewards=1
 /Game/Core/UI/ShopUI/Widget_LootChestIcons.Widget_LootChestIcons=1
+/Game/Core/UI/ShopUI/Widget_AreYouSureBUY.Widget_AreYouSureBUY=1
+/Game/Core/Fonts/Game_of_Thrones.Game_of_Thrones=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1626,12 +1641,12 @@ bCanPreviewSwapAspectRatio=False
 
 [DetailPropertyExpansion]
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" "
-Object="\"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" "
-ContentWidget=
-PanelWidget=
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" "
 GOTGameMode_C=
 GameModeBase=
 Info=
@@ -1649,9 +1664,12 @@ Widget_MainMenuRoster_C="\"Object.Appearance.ColorAndOpacity\" "
 UniformGridPanel="\"Object.Child Layout.SlotPadding\" "
 Widget_MainMenu_CharScreen_C=
 Widget_ShopWindow_C="\"Object.Appearance.ColorAndOpacity\" "
-Widget_LootChestRewards_C="\"Object.\" \"Object.\" "
-Widget_LootChestIcons_C=
+Widget_LootChestRewards_C=
+Widget_LootChestIcons_C="\"Object.Appearance.ColorAndOpacity\" "
 Widget_AreYouSureBUY_C="\"Object.Appearance.ColorAndOpacity\" "
+FontFace="\"Object.FontFace\" "
+Struct_LootChests="\"Struct.Icon_8_6ED72D364C4ADA89E41FD69CFA102D76\" "
+Struct_CharInfo="\"Struct.Icon_7_9B43C16D45B6E0C00A1F9DB8D32E6636\" "
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
