--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,6 +134,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/Core/Maps/TopDownExampleMap
@@ -767,6 +769,7 @@ SequencerWidgets.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei.CharDataHolder_Missandei
+OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
 OpenAssetsAtExit=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass
 OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
 OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen.Widget_MainMenu_CharScreen
@@ -774,26 +777,26 @@ OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster.Widget_MainM
 OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei
-MRUItem1=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem2=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem4=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem5=/Game/Core/Blueprints/GOTGameMode
-MRUItem6=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem7=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem8=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
-MRUItem9=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem10=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
-MRUItem11=/Game/Core/UI/ShopUI/Widget_LootChestIcons
-MRUItem12=/Game/Core/DataBPs/Struct_CharInfo
-MRUItem13=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem14=/Game/Core/DataBPs/Struct_LootChests
-MRUItem15=/Game/Core/DataBPs/LootTables/Struct_LootTable
-MRUItem16=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem17=/Game/Core/UI/Icons/Drogo
-MRUItem18=/Game/Core/DataHolderBps/Character/CharDataHolder_LordEddardStark
-MRUItem19=/Game/Core/Blueprints/MainPlayerController
+MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem1=/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei
+MRUItem2=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem3=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem4=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem6=/Game/Core/Blueprints/GOTGameMode
+MRUItem7=/Game/Core/UI/ShopUI/Widget_LootChestRewards
+MRUItem8=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem9=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
+MRUItem10=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
+MRUItem12=/Game/Core/UI/ShopUI/Widget_LootChestIcons
+MRUItem13=/Game/Core/DataBPs/Struct_CharInfo
+MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem15=/Game/Core/DataBPs/Struct_LootChests
+MRUItem16=/Game/Core/DataBPs/LootTables/Struct_LootTable
+MRUItem17=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
+MRUItem18=/Game/Core/UI/Icons/Drogo
+MRUItem19=/Game/Core/DataHolderBps/Character/CharDataHolder_LordEddardStark
 
 [DetailCategories]
 GOTGameMode_C.Tick=True
@@ -1007,6 +1010,15 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Events=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1040,9 +1052,9 @@ bCanPreviewSwapAspectRatio=False
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
 Image="\"Object.Appearance.Brush\" "
 Struct_CharInfo="\"Struct.Icon_7_9B43C16D45B6E0C00A1F9DB8D32E6636\" "
 
