--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,9 +112,10 @@ Primitive=False
 Special Effects=False
 Uncategorized=False
 User Created=False
+Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/Core/UI/Widgets_MainMenu
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -765,16 +766,13 @@ BlueprintGraph.TimeStamp=2019.03.11-15.33.03
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2019.03.11-15.33.29
 SequencerWidgets.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2019.03.11-15.33.08
+DataTableEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2019.03.11-15.33.31
+TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei.CharDataHolder_Missandei
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
-OpenAssetsAtExit=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass
-OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen.Widget_MainMenu_CharScreen
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster.Widget_MainMenuRoster
-OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
@@ -1048,6 +1046,9 @@ bCanPreviewSwapAspectRatio=False
 /Game/Core/UI/ShopUI/Widget_LootChestIcons.Widget_LootChestIcons=1
 /Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster.Widget_MainMenuRoster=1
 /Game/Core/UI/ShopUI/Widget_LootChestRewards.Widget_LootChestRewards=1
+/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
+/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei.CharDataHolder_Missandei=1
+/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu=1
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
