--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,8 +115,8 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Core/UI/Widgets_MainMenu
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SelectedPaths=/Game/Core
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -773,28 +773,33 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons.Widget_HouseListIcons
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseList.Widget_HouseList
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector.Widget_HouseMenuSelector
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem1=/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei
-MRUItem2=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem3=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem4=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem6=/Game/Core/Blueprints/GOTGameMode
-MRUItem7=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem8=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem9=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
-MRUItem10=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
-MRUItem12=/Game/Core/UI/ShopUI/Widget_LootChestIcons
-MRUItem13=/Game/Core/DataBPs/Struct_CharInfo
-MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem15=/Game/Core/DataBPs/Struct_LootChests
-MRUItem16=/Game/Core/DataBPs/LootTables/Struct_LootTable
-MRUItem17=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem18=/Game/Core/UI/Icons/Drogo
-MRUItem19=/Game/Core/DataHolderBps/Character/CharDataHolder_LordEddardStark
+MRUItem0=/Game/Core/Blueprints/GOTGameMode
+MRUItem1=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem2=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
+MRUItem3=/Game/Core/UI/Widgets_Social/Widget_HouseList
+MRUItem4=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
+MRUItem5=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem6=/Game/Core/UI/Widgets_Social/Widget_FriendsList
+MRUItem7=/Game/Core/UI/UI_Images/FriendIcon
+MRUItem8=/Game/Core/DataHolderBps/Character/CharDataHolder_Missandei
+MRUItem9=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem10=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem12=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem13=/Game/Core/UI/ShopUI/Widget_LootChestRewards
+MRUItem14=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem15=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
+MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem17=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
+MRUItem18=/Game/Core/UI/ShopUI/Widget_LootChestIcons
+MRUItem19=/Game/Core/DataBPs/Struct_CharInfo
 
 [DetailCategories]
 GOTGameMode_C.Tick=True
@@ -1017,6 +1022,86 @@ Border.Performance=True
 Border.Clipping=True
 Border.Navigation=True
 Border.Events=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Behavior=True
+ScrollBox.Render Transform=True
+ScrollBox.Performance=True
+ScrollBox.Clipping=True
+ScrollBox.Navigation=True
+ScrollBox.Events=True
+Widget_MainMenu_C.Appearance=True
+Widget_MainMenu_C.Designer=True
+Widget_MainMenu_C.Input=True
+Widget_MainMenu_C.Interaction=True
+Widget_MainMenu_C.Performance=True
+Widget_MainMenu_C.Layout=True
+Widget_MainMenu_C.Behavior=True
+Widget_MainMenu_C.Render Transform=True
+Widget_MainMenu_C.Clipping=True
+Widget_MainMenu_C.Navigation=True
+Widget_HouseMenu_C.Appearance=True
+Widget_HouseMenu_C.Designer=True
+Widget_HouseMenu_C.Input=True
+Widget_HouseMenu_C.Interaction=True
+Widget_HouseMenu_C.Performance=True
+Widget_HouseMenu_C.Layout=True
+Widget_HouseMenu_C.Behavior=True
+Widget_HouseMenu_C.Render Transform=True
+Widget_HouseMenu_C.Clipping=True
+Widget_HouseMenu_C.Navigation=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+Widget_HouseListIcons_C.Layout=True
+Widget_HouseListIcons_C.Appearance=True
+Widget_HouseListIcons_C.Input=True
+Widget_HouseListIcons_C.Interaction=True
+Widget_HouseListIcons_C.Behavior=True
+Widget_HouseListIcons_C.Render Transform=True
+Widget_HouseListIcons_C.Performance=True
+Widget_HouseListIcons_C.Clipping=True
+Widget_HouseListIcons_C.Navigation=True
+Widget_HouseList_C.Default=True
+Widget_HouseList_C.Appearance=True
+Widget_HouseList_C.Designer=True
+Widget_HouseList_C.Input=True
+Widget_HouseList_C.Interaction=True
+Widget_HouseList_C.Performance=True
+Widget_HouseList_C.Layout=True
+Widget_HouseList_C.Behavior=True
+Widget_HouseList_C.Render Transform=True
+Widget_HouseList_C.Clipping=True
+Widget_HouseList_C.Navigation=True
+Widget_HouseMenuSelector_C.Layout=True
+Widget_HouseMenuSelector_C.Appearance=True
+Widget_HouseMenuSelector_C.Input=True
+Widget_HouseMenuSelector_C.Interaction=True
+Widget_HouseMenuSelector_C.Behavior=True
+Widget_HouseMenuSelector_C.Render Transform=True
+Widget_HouseMenuSelector_C.Performance=True
+Widget_HouseMenuSelector_C.Clipping=True
+Widget_HouseMenuSelector_C.Navigation=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Widget_HouseListIcons_C.Designer=True
+K2Node_SetFieldsInStruct.PinOptions=True
+Widget_HouseListIcons_C.Default=True
+Widget_HouseMenuSelector_C.Default=True
+Widget_HouseMenuSelector_C.Designer=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1053,14 +1138,18 @@ bCanPreviewSwapAspectRatio=False
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
-Object="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object=
 Image="\"Object.Appearance.Brush\" "
 Struct_CharInfo="\"Struct.Icon_7_9B43C16D45B6E0C00A1F9DB8D32E6636\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+PanelWidget=
+Border="\"Object.Appearance.Background\" "
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.400
+ScreenPosition=X=248.000 Y=96.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
