--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -760,16 +760,28 @@ MovieSceneCapture.TimeStamp=2019.03.11-15.33.22
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons.Widget_MainMenuRoster_Icons
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED.Widget_MainMenuRoster_IconsLOCKED
 OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster.Widget_MainMenuRoster
+OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo.CharDataHolder_KhalDrogo
+OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark.CharDataHolder_HOTKEddardStark
+OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen.CharDataHolder_DaenerysTargaryen
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons.Widget_HouseListIcons
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem1=/Game/NewMacroLibrary
+MRUItem0=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
+MRUItem1=/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen
 MRUItem2=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem3=/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen
-MRUItem4=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem5=/Game/NewBlueprint
+MRUItem3=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem4=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
+MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem6=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem7=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem8=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem9=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem10=/Game/NewMacroLibrary
+MRUItem11=/Game/NewBlueprint
 
 [DetailCategories]
 NewBlueprint_C.Tick=True
@@ -835,6 +847,81 @@ CharDataHolder_HOTKEddardStark_C.Actor=True
 K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+WorldSettings.Broadphase=True
+ShipDataHolder_MasterClass_C.Tick=True
+ShipDataHolder_MasterClass_C.Rendering=True
+ShipDataHolder_MasterClass_C.Replication=True
+ShipDataHolder_MasterClass_C.Input=True
+ShipDataHolder_MasterClass_C.Actor=True
+CharDataHolder_MasterClass_C.Tick=True
+CharDataHolder_MasterClass_C.Default=True
+CharDataHolder_MasterClass_C.Rendering=True
+CharDataHolder_MasterClass_C.Replication=True
+CharDataHolder_MasterClass_C.Input=True
+CharDataHolder_MasterClass_C.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+Widget_MainMenu_CharScreen_C.Default=True
+Widget_MainMenu_CharScreen_C.Appearance=True
+Widget_MainMenu_CharScreen_C.Designer=True
+Widget_MainMenu_CharScreen_C.Input=True
+Widget_MainMenu_CharScreen_C.Interaction=True
+Widget_MainMenu_CharScreen_C.Performance=True
+Widget_MainMenu_CharScreen_C.Layout=True
+Widget_MainMenu_CharScreen_C.Behavior=True
+Widget_MainMenu_CharScreen_C.Render Transform=True
+Widget_MainMenu_CharScreen_C.Clipping=True
+Widget_MainMenu_CharScreen_C.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+PanelWidget.Behavior=True
+PanelWidget.Render Transform=True
+PanelWidget.Performance=True
+PanelWidget.Clipping=True
+PanelWidget.Navigation=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+Widget_HouseListIcons_C.Default=True
+Widget_HouseListIcons_C.Appearance=True
+Widget_HouseListIcons_C.Designer=True
+Widget_HouseListIcons_C.Input=True
+Widget_HouseListIcons_C.Interaction=True
+Widget_HouseListIcons_C.Performance=True
+Widget_HouseListIcons_C.Layout=True
+Widget_HouseListIcons_C.Behavior=True
+Widget_HouseListIcons_C.Render Transform=True
+Widget_HouseListIcons_C.Clipping=True
+Widget_HouseListIcons_C.Navigation=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -879,5 +966,29 @@ MeshImportExport=../../../../../../GoTLegends/GoTLegends/Content/
 WorldRoot=../../../../../../GoTLegends/GoTLegends/Content/
 Level=../../../../../../GoTLegends/GoTLegends/Content/
 Project=D:/Program Files/Epic Games/UE_4.20/
+
+[MRU]
+MRUItem0=/Game/Core/Maps/TopDownExampleMap
+
+[AssetEditorToolkitTabLocation]
+/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
+/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass=1
+/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen.Widget_MainMenu_CharScreen=1
+/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen.CharDataHolder_DaenerysTargaryen=1
+
+[PluginBrowser]
+InstalledPlugins=DungeonArchitect
+InstalledPlugins=MirrorAnimationSystem
+InstalledPlugins=MixamoAnimationRetargeting
+InstalledPlugins=PlayFab
+InstalledPlugins=Savior
+
+[DetailPropertyExpansion]
+Border="\"Object.Content.ContentColorAndOpacity\" "
+ContentWidget="\"Object.Content.ContentColorAndOpacity\" "
+PanelWidget="\"Object.Content.ContentColorAndOpacity\" "
+Widget="\"Object.Content.ContentColorAndOpacity\" "
+Visual="\"Object.Content.ContentColorAndOpacity\" "
+Object="\"Object.Content.ContentColorAndOpacity\" "
 
 
