--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -764,40 +764,28 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons.Widget_HouseListIcons
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_ChatEntry.Widget_ChatEntry
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseRoster.Widget_HouseRoster
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector.Widget_HouseMenuSelector
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseMenu.Widget_HouseMenu
-OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon.Widget_HouseRosterIcon
-OpenAssetsAtExit=/Game/Core/UI/ShopUI/Widget_LootChestRewards.Widget_LootChestRewards
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseList.Widget_HouseList
-OpenAssetsAtExit=/Game/Core/UI/LoadingScreen.LoadingScreen
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/LoadingScreen
-MRUItem1=/Game/Core/UI/Widgets_Social/Widget_HouseList
-MRUItem2=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem3=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem4=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
-MRUItem5=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem6=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
-MRUItem7=/Game/Core/Blueprints/GOTGameMode
-MRUItem8=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem9=/Game/Core/UI/Widgets_Social/NewWidgetBlueprint
-MRUItem10=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
-MRUItem12=/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen
-MRUItem13=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem15=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
-MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem17=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem18=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem19=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem0=/Game/Core/UI/Widgets_Social/Widget_ChatEntry
+MRUItem1=/Game/Core/UI/LoadingScreen
+MRUItem2=/Game/Core/UI/Widgets_Social/Widget_HouseList
+MRUItem3=/Game/Core/UI/ShopUI/Widget_LootChestRewards
+MRUItem4=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem5=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
+MRUItem6=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem7=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
+MRUItem8=/Game/Core/Blueprints/GOTGameMode
+MRUItem9=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
+MRUItem10=/Game/Core/UI/Widgets_Social/NewWidgetBlueprint
+MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem12=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
+MRUItem13=/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen
+MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
+MRUItem15=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
+MRUItem17=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem18=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem19=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
 
 [DetailCategories]
 NewBlueprint_C.Tick=True
@@ -1137,7 +1125,7 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.286
+ScreenPosition=X=320.000 Y=154.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1190,6 +1178,8 @@ K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 /Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector.Widget_HouseMenuSelector=1
 /Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen=1
 /Game/Core/UI/Widgets_Social/Widget_HouseRoster.Widget_HouseRoster=1
+/Game/Core/UI/LoadingScreen.LoadingScreen=1
+/Game/Core/UI/Widgets_Social/Widget_ChatEntry.Widget_ChatEntry=1
 
 [PluginBrowser]
 InstalledPlugins=DungeonArchitect
