--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,7 @@ LastExecutedLaunchName=LAPTOP-LG71H09L
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InMobilePreview
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -763,29 +764,30 @@ MovieSceneCapture.TimeStamp=2019.03.11-15.33.22
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Core/UI/ShopUI/WidgetOffersWindow.WidgetOffersWindow
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_Social/Widget_ChatEntry
-MRUItem1=/Game/Core/UI/LoadingScreen
-MRUItem2=/Game/Core/UI/Widgets_Social/Widget_HouseList
+MRUItem0=/Game/Core/UI/ShopUI/WidgetOffersWindow
+MRUItem1=/Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers
+MRUItem2=/Game/Core/UI/ShopUI/Widget_OfferRewards
 MRUItem3=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem4=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem5=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
+MRUItem4=/Game/Core/UI/ShopUI/Widget_LootChestIcons
+MRUItem5=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
 MRUItem6=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem7=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
-MRUItem8=/Game/Core/Blueprints/GOTGameMode
-MRUItem9=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem10=/Game/Core/UI/Widgets_Social/NewWidgetBlueprint
-MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem12=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
-MRUItem13=/Game/Core/DataHolderBps/Character/CharDataHolder_DaenerysTargaryen
-MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem15=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_Icons
-MRUItem17=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem18=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem19=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem7=/Game/Core/UI/Widgets_Roster/Button
+MRUItem8=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
+MRUItem9=/Game/Core/UI/Widgets_Social/Widget_HouseCreation
+MRUItem10=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem11=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem12=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
+MRUItem13=/Game/Core/UI/Widgets_Social/Widget_ChatEntry
+MRUItem14=/Game/Core/UI/LoadingScreen
+MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseList
+MRUItem16=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem17=/Game/Core/Blueprints/GOTGameMode
+MRUItem18=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
+MRUItem19=/Game/Core/UI/Widgets_Social/NewWidgetBlueprint
 
 [DetailCategories]
 NewBlueprint_C.Tick=True
@@ -1060,7 +1062,7 @@ Widget_ChatEntry_C.Render Transform=True
 Widget_ChatEntry_C.Clipping=True
 Widget_ChatEntry_C.Navigation=True
 EditableTextBox.Layout=True
-EditableTextBox.Content=False
+EditableTextBox.Content=True
 EditableTextBox.Appearance=True
 EditableTextBox.Behavior=True
 EditableTextBox.Render Transform=True
@@ -1110,6 +1112,86 @@ LoadingScreen_C.Behavior=True
 LoadingScreen_C.Render Transform=True
 LoadingScreen_C.Clipping=True
 LoadingScreen_C.Navigation=True
+Widget_HouseCreation_C.Appearance=True
+Widget_HouseCreation_C.Designer=True
+Widget_HouseCreation_C.Input=True
+Widget_HouseCreation_C.Interaction=True
+Widget_HouseCreation_C.Performance=True
+Widget_HouseCreation_C.Layout=True
+Widget_HouseCreation_C.Behavior=True
+Widget_HouseCreation_C.Render Transform=True
+Widget_HouseCreation_C.Clipping=True
+Widget_HouseCreation_C.Navigation=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+Widget_HouseCreation_C.Default=True
+Widget_MainMenuRoster_Icons_C.Layout=True
+Widget_MainMenuRoster_Icons_C.Default=True
+Widget_MainMenuRoster_Icons_C.Appearance=True
+Widget_MainMenuRoster_Icons_C.Input=True
+Widget_MainMenuRoster_Icons_C.Interaction=True
+Widget_MainMenuRoster_Icons_C.Behavior=True
+Widget_MainMenuRoster_Icons_C.Render Transform=True
+Widget_MainMenuRoster_Icons_C.Performance=True
+Widget_MainMenuRoster_Icons_C.Clipping=True
+Widget_MainMenuRoster_Icons_C.Navigation=True
+UniformGridPanel.Layout=True
+UniformGridPanel.Child Layout=True
+UniformGridPanel.Behavior=True
+UniformGridPanel.Render Transform=True
+UniformGridPanel.Performance=True
+UniformGridPanel.Clipping=True
+UniformGridPanel.Navigation=True
+WidgetOffersWindow_C.Default=True
+WidgetOffersWindow_C.Appearance=True
+WidgetOffersWindow_C.Designer=True
+WidgetOffersWindow_C.Input=True
+WidgetOffersWindow_C.Interaction=True
+WidgetOffersWindow_C.Performance=True
+WidgetOffersWindow_C.Layout=True
+WidgetOffersWindow_C.Behavior=True
+WidgetOffersWindow_C.Render Transform=True
+WidgetOffersWindow_C.Clipping=True
+WidgetOffersWindow_C.Navigation=True
+Widget_AreYouSureBUY_C.Default=True
+Widget_AreYouSureBUY_C.Appearance=True
+Widget_AreYouSureBUY_C.Designer=True
+Widget_AreYouSureBUY_C.Input=True
+Widget_AreYouSureBUY_C.Interaction=True
+Widget_AreYouSureBUY_C.Performance=True
+Widget_AreYouSureBUY_C.Layout=True
+Widget_AreYouSureBUY_C.Behavior=True
+Widget_AreYouSureBUY_C.Render Transform=True
+Widget_AreYouSureBUY_C.Clipping=True
+Widget_AreYouSureBUY_C.Navigation=True
+Widget_LootChestIcons_C.Default=True
+Widget_LootChestIcons_C.Appearance=True
+Widget_LootChestIcons_C.Designer=True
+Widget_LootChestIcons_C.Input=True
+Widget_LootChestIcons_C.Interaction=True
+Widget_LootChestIcons_C.Performance=True
+Widget_LootChestIcons_C.Layout=True
+Widget_LootChestIcons_C.Behavior=True
+Widget_LootChestIcons_C.Render Transform=True
+Widget_LootChestIcons_C.Clipping=True
+Widget_LootChestIcons_C.Navigation=True
+Widget_AreYouSureBUYOffers_C.Default=True
+Widget_AreYouSureBUYOffers_C.Appearance=True
+Widget_AreYouSureBUYOffers_C.Designer=True
+Widget_AreYouSureBUYOffers_C.Input=True
+Widget_AreYouSureBUYOffers_C.Interaction=True
+Widget_AreYouSureBUYOffers_C.Performance=True
+Widget_AreYouSureBUYOffers_C.Layout=True
+Widget_AreYouSureBUYOffers_C.Behavior=True
+Widget_AreYouSureBUYOffers_C.Render Transform=True
+Widget_AreYouSureBUYOffers_C.Clipping=True
+Widget_AreYouSureBUYOffers_C.Navigation=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1125,7 +1207,7 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.000
+ScreenPosition=X=320.000 Y=153.714
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1180,6 +1262,13 @@ K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 /Game/Core/UI/Widgets_Social/Widget_HouseRoster.Widget_HouseRoster=1
 /Game/Core/UI/LoadingScreen.LoadingScreen=1
 /Game/Core/UI/Widgets_Social/Widget_ChatEntry.Widget_ChatEntry=1
+/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu=1
+/Game/Core/UI/Widgets_Social/Widget_HouseMenu.Widget_HouseMenu=1
+/Game/Core/UI/Widgets_Social/Widget_HouseCreation.Widget_HouseCreation=1
+/Game/Core/UI/ShopUI/Widget_AreYouSureBUY.Widget_AreYouSureBUY=1
+/Game/Core/UI/ShopUI/Widget_LootChestIcons.Widget_LootChestIcons=1
+/Game/Core/UI/ShopUI/WidgetOffersWindow.WidgetOffersWindow=1
+/Game/Core/UI/ShopUI/Widget_LootChestRewards.Widget_LootChestRewards=1
 
 [PluginBrowser]
 InstalledPlugins=DungeonArchitect
@@ -1189,14 +1278,30 @@ InstalledPlugins=PlayFab
 InstalledPlugins=Savior
 
 [DetailPropertyExpansion]
-Border="\"Object.Content.ContentColorAndOpacity\" "
-ContentWidget=
-PanelWidget=
-Widget=
-Visual=
-Object=
-TextBlock=
-TextLayoutWidget=
-EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" "
+Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.Margin\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Style.WidgetStyle.BottomShadowBrush.Margin\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetStyle.LeftShadowBrush.Margin\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush\" \"Object.Style.WidgetStyle.RightShadowBrush.Margin\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetBarStyle\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.Margin\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.Margin\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.Margin\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget_HouseCreation_C=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+BackgroundBlur="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget_MainMenuRoster_Icons_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WidgetOffersWindow_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget_LootChestIcons_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget_AreYouSureBUY_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget_AreYouSureBUYOffers_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 
