--- a/GoTLegends/Saved/Config/Windows/Engine.ini
+++ b/GoTLegends/Saved/Config/Windows/Engine.ini
@@ -34,4 +34,15 @@ TunnelMulticastEndpoint=
 [MagicLeapSettings]
 WindowMirrorMode=1
 
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
 
